log
Wed 24 Apr 2024 07:16:02 PM UTC: 
 tests:  0|6
total_score: 0/70
8f10125
Wed 24 Apr 2024 07:36:03 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
53c9d40
Wed 24 Apr 2024 07:39:52 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:18: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   59 |     map->current = NULL;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
aa85a3c
Wed 24 Apr 2024 07:39:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b8f10d1
Wed 24 Apr 2024 07:41:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:29: error: too few arguments to function ‘calloc’
   56 |     map->buckets = (Pair **)calloc(sizeof(Pair *) * capacity);
      |                             ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
0a4905c
Wed 24 Apr 2024 07:44:44 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3f5bceb
Wed 24 Apr 2024 07:59:57 PM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:18: error: implicit declaration of function ‘resolveCollision’ [-Werror=implicit-function-declaration]
   55 |     int newPos = resolveCollision(map, pos);
      |                  ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4742973
Wed 24 Apr 2024 08:01:03 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:18: error: implicit declaration of function ‘resolveCollision’; did you mean ‘solveCollision’? [-Werror=implicit-function-declaration]
   58 |     int newPos = resolveCollision(map, pos);
      |                  ^~~~~~~~~~~~~~~~
      |                  solveCollision
cc1: all warnings being treated as errors
Compilation failed
32f10b6
Wed 24 Apr 2024 08:01:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:33: error: passing argument 1 of ‘solveCollision’ makes integer from pointer without a cast [-Werror=int-conversion]
   58 |     int newPos = solveCollision(map, pos);
      |                                 ^~~
      |                                 |
      |                                 HashMap * {aka struct HashMap *}
hashmap.c:41:25: note: expected ‘int’ but argument is of type ‘HashMap *’ {aka ‘struct HashMap *’}
   41 | void solveCollision(int hash, int *index, int size) {
      |                     ~~~~^~~~
hashmap.c:58:38: error: passing argument 2 of ‘solveCollision’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |     int newPos = solveCollision(map, pos);
      |                                      ^~~
      |                                      |
      |                                      int
hashmap.c:41:36: note: expected ‘int *’ but argument is of type ‘int’
   41 | void solveCollision(int hash, int *index, int size) {
      |                               ~~~~~^~~~~
hashmap.c:58:18: error: too few arguments to function ‘solveCollision’
   58 |     int newPos = solveCollision(map, pos);
      |                  ^~~~~~~~~~~~~~
hashmap.c:41:6: note: declared here
   41 | void solveCollision(int hash, int *index, int size) {
      |      ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e60e036
Wed 24 Apr 2024 08:02:23 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘solveCollision’:
hashmap.c:42:29: error: ‘size’ undeclared (first use in this function)
   42 |     *index = (*index + 1) % size;
      |                             ^~~~
hashmap.c:42:29: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘insertMap’:
hashmap.c:58:38: error: passing argument 2 of ‘solveCollision’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |     int newPos = solveCollision(map, pos);
      |                                      ^~~
      |                                      |
      |                                      int
hashmap.c:41:41: note: expected ‘int *’ but argument is of type ‘int’
   41 | void solveCollision(HashMap * map, int *index) {
      |                                    ~~~~~^~~~~
hashmap.c:58:18: error: void value not ignored as it ought to be
   58 |     int newPos = solveCollision(map, pos);
      |                  ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ccadca8
Wed 24 Apr 2024 08:02:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:38: error: passing argument 2 of ‘solveCollision’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |     int newPos = solveCollision(map, pos);
      |                                      ^~~
      |                                      |
      |                                      int
hashmap.c:41:41: note: expected ‘int *’ but argument is of type ‘int’
   41 | void solveCollision(HashMap * map, int *index) {
      |                                    ~~~~~^~~~~
hashmap.c:58:18: error: void value not ignored as it ought to be
   58 |     int newPos = solveCollision(map, pos);
      |                  ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0e6e10a
Wed 24 Apr 2024 08:02:55 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:58:38: error: passing argument 2 of ‘solveCollision’ makes pointer from integer without a cast [-Werror=int-conversion]
   58 |     int newPos = solveCollision(map, pos);
      |                                      ^~~
      |                                      |
      |                                      int
hashmap.c:41:40: note: expected ‘int *’ but argument is of type ‘int’
   41 | int solveCollision(HashMap * map, int *index) {
      |                                   ~~~~~^~~~~
hashmap.c: In function ‘solveCollision’:
hashmap.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f4b44a0
Wed 24 Apr 2024 08:05:11 PM UTC: 
 hashmap.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:22: error: array subscript is not an integer
   46 |   while (map->buckets[index] != NULL && strcmp(map->buckets[index]->key, key) != 0) {
      |                      ^
hashmap.c:46:60: error: array subscript is not an integer
   46 |   while (map->buckets[index] != NULL && strcmp(map->buckets[index]->key, key) != 0) {
      |                                                            ^
hashmap.c:47:25: error: invalid operands to binary % (have ‘char * (*)(const char *, int)’ and ‘long int’)
   47 |     index = (index + 1) % map->capacity;
      |             ~~~~~~~~~~~ ^ ~~~~~~~~~~~~~
      |                    |         |
      |                    |         long int
      |                    char * (*)(const char *, int)
Compilation failed
6c2ce14
Wed 24 Apr 2024 08:05:48 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
be701f0
Wed 24 Apr 2024 08:06:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
4af619b
Wed 24 Apr 2024 08:12:41 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
3337211
Wed 24 Apr 2024 08:16:31 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
10afa6f
